--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,8 @@
     <p>
       We provide parallel data for Machine Translation for translation amongst Indian languages.
     </p>
+
+    See the combined stats <a href="{{ url_for('stats') }}">here</a>
+    See stats for pairs here <a href="{{ url_for('catalogue') }}">here</a>
 </div>
 {% endblock %}
