--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,5 +19,16 @@ background-color: #f0f0f0;
 }
 
 td.high {
-    background: #8ac57e;
+    background: #8dca9b;
+}
+
+.footer {
+    position: fixed;
+    left: 
+    0;
+    bottom: 0;
+    width: 100%;  
+    background-color: #343a40;
+    color: white;
+    text-align: center;
 }
