--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,17 @@
    
     {% endblock %}
   </main>
+
+  <br>
+  <br>
+  <br>
+  
+
+  <!-- <footer class="footer">
+    <div class="container">
+      <span>The content is the property of Kaivalya and Vedant</span>
+    </div>
+  </footer> -->
  
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script> -->
   
@@ -52,6 +63,7 @@
 
     {% block script %}
     {% endblock %}
+  
 
   </body>
 </html>
