--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('about') }}">About Us</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('references') }}">References</a>
+          </li>
         </ul>
 
         
