--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,3 +35,20 @@ td.high {
 span .imp{
     color: black;
 }
+
+span#ref-name {
+    font-weight: bold;
+}
+
+span#ref-mla {
+    font-style: italic;
+}
+
+tr#total {
+    font-weight: bold;
+    border-top: groove;
+}
+
+div.highlight {
+    background-color: #f5faad;
+}
